Nettoyage du contenu et continuité du design

--- a/templates/personnage/voir.html.twig
+++ b/templates/personnage/voir.html.twig
@@ -5,37 +5,14 @@
 {% block body %}
     <h1>Voici ton personnage</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Nom</th>
-                <td>{{ personnage.Nom }}</td>
-            </tr>
-            <tr>
-                <th>Date de naissance</th>
-                <td>{{ personnage.DateDeNaissance ? personnage.DateDeNaissance|date('d-m-Y') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ personnage.Description }}</td>
-            </tr>
-            <tr>
-                <th>Compétence</th>
-            </tr>
-            <tr>
-                <th>Niveau</th>
-                <td>{{ personnage.Niveau }}</td>
-            </tr>
-            <tr>
-                <th>Experience</th>
-                <td>{{ personnage.Experience }}</td>
-            </tr>
-            <tr>
-                <th>Vie</th>
-                <td>{{ personnage.Vie }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="disp-flex fl-col al-center mg-t-25px">
+        <p class="mg-5px">Nom : {{ personnage.Nom }}</p>
+        <p class="mg-5px">Description : {{ personnage.Description }}</p>
+        <p class="mg-5px">Date de naissance : {{ personnage.DateDeNaissance|date('d-m-Y') }}</p>
+        <p class="mg-5px">Vie : {{ personnage.Vie }}</p>
+        <p class="mg-5px">Niveau : {{ personnage.Niveau }}</p>
+        <p class="mg-5px">Expérience : {{ personnage.Experience }}</p>
+    </div>
 
     <a href="{{ path('home') }}">Retourner voir les personnages</a>
     {{ include('personnage/suppr_form.html.twig') }}
