--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}{% endblock %}</title>
-        <link rel="stylesheet" href="assets/css/normalize.css">
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link href="{{ asset('css/normalize.css') }}" type="text/css" rel="stylesheet">
+        <link href="{{ asset('css/style.css') }}" type="text/css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300&display=swap" rel="stylesheet"> 
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
@@ -16,10 +19,18 @@
         {% endblock %}
     </head>
     <body>
-        <header class="disp-flex justify-c-sp-ard height-10vh black">
-            <nav></nav>
+        <header class="disp-flex j-c-sp-btwn al-center height-6vh bc-black relative-p">
+            <a href="{{ path('home') }}" class="mg-l-5vw"><img src="https://www.nicepng.com/png/full/115-1153942_white-home-icon-png-white-home-logo-transparent.png" width="35" height="35" alt="icone de retour à l'index"></a>
+            <h1 class="c-white absolute-p absolute-p-c">The Empire</h1>
+            <nav class="disp-flex j-c-sp-btwn width-10vw mg-r-5vw">
+                <a href="{{ path('ajout_personnage') }}" class=""><img src="https://www.nicepng.com/png/full/251-2519428_0-add-icon-white-png.png" width="35" height="35" alt="icone d'ajout de personnage"></a>
+                <a href="{{ path('home_type') }}" class=""><img src="https://www.nicepng.com/png/full/782-7824434_contact-icon-tick-list-png-icon-white.png" width="35" height="35" alt="icone voir les types"></a>
+            </nav>
         </header>
-        {% block body %}
-        {% endblock %}
+
+        <div class="disp-flex fl-col j-c-center al-center">
+            {% block body %}
+            {% endblock %}
+        </div>
     </body>
 </html>
