--- a/templates/personnage/index.html.twig
+++ b/templates/personnage/index.html.twig
@@ -3,51 +3,24 @@
 {% block title %}Visionnez vos personnages !{% endblock %}
 
 {% block body %}
+    <div class="disp-flex fl-col al-center">
+        <h1>Visionnez vos personnages</h1>
+        <a href="{{ path('ajout_personnage') }}">Créez un nouveau personnage</a>
+        <a href="{{ path('home_type') }}">Afficher les types</a>
+    </div>
 
-        <div class="disp-flex j-c-center">
-            <h1>Visionnez vos personnages</h1>
-            <a href="{{ path('ajout_personnage') }}">Créez un nouveau personnage</a>
-            <a href="{{ path('home_type') }}">Afficher les types</a>
-        </div>
-
-        {% for personnage in personnages %}
-            <div class="disp-flex al-center flex-d-c mg-b-5vh">
-                <p class="mg-1vh">Nom : {{ personnage.Nom }}</p>
-                <p class="mg-1vh">Description : {{ personnage.Description }}</p>
-                <p class="mg-1vh">Date de naissance : {{ personnage.DateDeNaissance|date('d-m-Y') }}</p>
-                <p class="mg-1vh">Vie : {{ personnage.Vie }}</p>
-                <p class="mg-1vh">Niveau : {{ personnage.Niveau }}</p>
-                <p class="mg-1vh">Expérience : {{ personnage.Experience }}</p>
-                <a href="{{ path('voir_personnage', {'id': personnage.id}) }}">Voir en détail</a>
-            </div>
-        {% else %}
-            <p>Vous n'avez pas de personnage</p>
-        {% endfor %}
-
-
-        <style>
-            .disp-flex {
-                display: flex;
-            }
-
-            .j-c-center {
-                justify-content: center;
-            }
-
-            .al-center {
-                align-items: center;
-            }
-
-            .flex-d-c {
-                flex-direction: column;
-            }
-
-            .mg-1vh {
-                margin: 1vh;
-            }
-            .mg-b-5vh {
-                margin-bottom: 5vh
-            }
-        </style>
+    {% for personnage in personnages %}
+    <div class="disp-flex fl-col al-center mg-t-25px">
+        <p class="mg-5px">Nom : {{ personnage.Nom }}</p>
+        <p class="mg-5px">Description : {{ personnage.Description }}</p>
+        <p class="mg-5px">Date de naissance : {{ personnage.DateDeNaissance|date('d-m-Y') }}</p>
+        <p class="mg-5px">Vie : {{ personnage.Vie }}</p>
+        <p class="mg-5px">Niveau : {{ personnage.Niveau }}</p>
+        <p class="mg-5px">Expérience : {{ personnage.Experience }}</p>
+        <a href="{{ path('voir_personnage', {'id': personnage.id}) }}">Voir en détail</a>
+    </div>
+    {% else %}
+        <p class="mg-5px">Vous n'avez pas de personnage</p>
+    {% endfor %}
 
 {% endblock %}
