--- a/templates/type/voir.html.twig
+++ b/templates/type/voir.html.twig
@@ -3,17 +3,12 @@
 {% block title %}Voici ton type{% endblock %}
 
 {% block body %}
-    <h1>Voici ton type</h1>
+    
+    <div class="disp-flex fl-col al-center mg-t-25px">
+        <h1>Voici ton type</h1>
+        <img src="{{ type.avatar }}" width="500" height="500">
+        <p class="mg-5px">Nom : {{ type.Nom }}</p>
+        <a href="{{ path('home_type') }}">Retourner voir les types</a>
+    </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <img src="{{ type.avatar }}" width="500" height="500">
-                <th>Nom</th>
-                <td>{{ type.Nom }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('home_type') }}">Retourner voir les types</a>
 {% endblock %}
