--- a/templates/personnage/ajout.html.twig
+++ b/templates/personnage/ajout.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('personnage/form.html.twig') }}
 
-    <a href="{{ path('home') }}">Retournez voir les personnages</a>
+    <a class="button" href="{{ path('home') }}">Voir les personnages</a>
 {% endblock %}
