--- a/templates/type/voir.html.twig
+++ b/templates/type/voir.html.twig
@@ -8,7 +8,7 @@
         <h1>Voici ton type</h1>
         <img src="{{ type.avatar }}" width="500" height="500">
         <p class="mg-5px">Nom : {{ type.Nom }}</p>
-        <a href="{{ path('home_type') }}">Retourner voir les types</a>
+        <a class="button" href="{{ path('home_type') }}">Voir les types</a>
     </div>
 
 {% endblock %}
