--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,16 @@
 body {
     font-family: 'Inter Tight', sans-serif;
+    background-image: url("https://images2.alphacoders.com/249/thumb-1920-249110.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    color: white;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
 
 .disp-flex {
@@ -34,12 +45,16 @@ body {
     width: 10vw;
 }
 
-.bc-black {
-    background-color: #292929;
+.h-85vh {
+    height: 85vh;
 }
 
-.c-white {
-    color: white;
+.w-100pc {
+    width: 100%;
+}
+
+.bc-black {
+    background-color: #292929;
 }
 
 .mg-l-5vw {
@@ -69,4 +84,27 @@ body {
 .absolute-p-c {
     top: 10%; left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.glassphormism {
+    background: rgba(255, 255, 255, 0);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(7.1px);
+    -webkit-backdrop-filter: blur(7.1px);
+}
+
+.pad-20px {
+    padding: 20px;
+}
+
+.button {
+    background-color: black;
+    border-radius: 6px;
+    cursor: pointer;
+    height: 44px;
+    width: 8vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
