--- a/templates/personnage/modif.html.twig
+++ b/templates/personnage/modif.html.twig
@@ -7,6 +7,6 @@
 
     {{ include('personnage/form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <a href="{{ path('home') }}">Retourner voir les personnages</a>
+    <a class="button" href="{{ path('home') }}">Retourner voir les personnages</a>
 
 {% endblock %}
