--- a/templates/type/index.html.twig
+++ b/templates/type/index.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
 
     <div class="disp-flex fl-col al-center">
+        <a class="button" href="{{ path('ajout_type') }}">Ajout type</a>
         <a class="button" href="{{ path('home') }}">Voir les personnages</a>
         <p>Visionnez vos types</p>
     </div>
