--- a/templates/personnage/voir.html.twig
+++ b/templates/personnage/voir.html.twig
@@ -12,6 +12,7 @@
         <p class="mg-5px">Vie : {{ personnage.Vie }}</p>
         <p class="mg-5px">Niveau : {{ personnage.Niveau }}</p>
         <p class="mg-5px">Expérience : {{ personnage.Experience }}</p>
+        <p class="mg-5px">Compétence :{% for competence in personnage.personnageCompetence %}{{ competence.Nom }}{% endfor %}</p>
     </div>
 
     <a class="button" href="{{ path('home') }}">Voir les personnages</a>
