--- a/templates/type/voir.html.twig
+++ b/templates/type/voir.html.twig
@@ -9,6 +9,9 @@
         <img src="{{ type.avatar }}" width="500" height="500">
         <p class="mg-5px">Nom : {{ type.Nom }}</p>
         <a class="button" href="{{ path('home_type') }}">Voir les types</a>
+        {{ include('type/suppr_form.html.twig') }}
+        <a class="button" href="{{ path('modif_type', {'id': type.id}) }}">Editer le type</a>
     </div>
+
 
 {% endblock %}
