--- a/templates/personnage/index.html.twig
+++ b/templates/personnage/index.html.twig
@@ -18,6 +18,7 @@
             <p class="mg-5px">Niveau : {{ personnage.Niveau }}</p>
             <p class="mg-5px">Expérience : {{ personnage.Experience }}</p>
             <p class="mg-5px">Compétence :{% for competence in personnage.personnageCompetence %}{{ competence.Nom }}{% endfor %}</p>
+            <p class="mg-5px">Type :{{ personnage.personnageType.Nom }}</p>
             <a class="button" href="{{ path('voir_personnage', {'id': personnage.id}) }}">Voir en détail</a>
         </div>
     {% endfor %}
