Ajout d'un peu de css avant la fin

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
         {% endblock %}
     </head>
     <body>
-        <header class="disp-flex j-c-sp-btwn al-center height-6vh bc-black relative-p">
+        <header class="disp-flex j-c-sp-btwn al-center height-60px bc-black relative-p">
             <a href="{{ path('home') }}" class="mg-l-5vw"><img src="https://www.nicepng.com/png/full/115-1153942_white-home-icon-png-white-home-logo-transparent.png" width="35" height="35" alt="icone de retour à l'index"></a>
             <h1 class="absolute-p absolute-p-c">The Empire</h1>
             <nav class="disp-flex j-c-sp-btwn width-10vw mg-r-5vw">
@@ -29,7 +29,7 @@
         </header>
 
         <div class="disp-flex j-c-center al-center w-100pc h-85vh">
-            <div class="disp-flex fl-col j-c-center al-center glassphormism pad-20px">
+            <div class="disp-flex fl-col j-c-center al-center glassphormism pad-20px mg-t-10vh">
                 {% block body %}
                 {% endblock %}
             </div>
