--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,6 @@ body {
     background-size: cover;
     width: 100%;
     height: 100vh;
-    overflow: hidden;
     color: white;
 }
 
@@ -37,8 +36,8 @@ a {
     flex-direction: column;
 }
 
-.height-6vh {
-    height: 6vh;
+.height-60px {
+    height: 60px;
 }
 
 .width-10vw {
@@ -67,6 +66,10 @@ a {
 
 .mg-t-25px {
     margin-top: 25px;
+}
+
+.mg-t-10vh {
+    margin-top: 10vh;
 }
 
 .mg-5px {
